refined direct sale option

--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
             <a href="{% url 'clients:client_list' %}">
                 <i class="fas fa-users"></i> Clients
             </a>
-            <a href="{% url 'sales:direct_sale' %}">
+            <a href="{% url 'sales:direct_sale_form' %}">
                 <i class="fas fa-chart-line"></i> Sales
             </a>
             <a href="{% url 'documents:document_list' %}">
